--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@
   padding: 80px 0px 0px;
   position: relative;
   overflow: hidden;
-  background-color: antiquewhite;
+  background-color: white;
 }
 
 .login .section {
